[package]
version = { workspace = true }
edition = "2021"
name = "mitzvah"

[dependencies]
mitzvah_macros = { workspace = true }

syn = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }

[features]
proc-macro2 = ["dep:proc-macro2", "dep:syn"]
syn = ["dep:proc-macro2", "dep:syn"]
